--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-web</artifactId> 
-    </dependency>  
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency> 
       <groupId>com.microsoft.sqlserver</groupId>  
       <artifactId>mssql-jdbc</artifactId>  
@@ -35,8 +41,8 @@
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-test</artifactId>  
       <scope>test</scope> 
-    </dependency> 
-  </dependencies>  
+    </dependency>
+  </dependencies>
   <build> 
     <plugins> 
       <plugin> 
