--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,12 @@
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-data-jdbc</artifactId> 
-    </dependency>  
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.9.0</version>
+    </dependency>
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-web</artifactId> 
@@ -40,7 +45,7 @@
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-test</artifactId>  
-      <scope>test</scope> 
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build> 
